Fixed spacing issues, removed hardcoded css values, and added new css variables to colors.css

--- a/site/src/assets/styles/colors.css
+++ b/site/src/assets/styles/colors.css
@@ -23,6 +23,8 @@
     --modal-footer-text: rgb(33, 37, 41);
     --btn-primary-background: #007bff;
     --btn-primary-text: #ffffff;
+    --btn-box-shadow: none;
+    --btn-transition: all 0s ease 0s;
     --department-link-hover: #d3d3d3;
     --select-background: #ffffff;
     --select-text: #495057;
